// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> mount rendering matches the snapshot 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <img
        alt="logo"
        className="App-logo"
        src="logo.svg"
      />
      <p>
        Edit 
        <code>
          src/App.js
        </code>
         and save to reload.
      </p>
      <a
        className="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
    <Form>
      <form
        data-testid="addUserForm"
        onSubmit={[Function]}
      >
        <h2>
          Request Information
        </h2>
        <input
          data-testid="name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          value=""
        />
        <input
          data-testid="email"
          onChange={[Function]}
          placeholder="Email"
          type="text"
          value=""
        />
        <input
          data-testid="number"
          onChange={[Function]}
          placeholder="Number"
          type="text"
          value=""
        />
        <div>
          <input
            checked={true}
            data-testid="checked"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <p
            className="promotions"
            data-testid="promotionsP"
          >
            Receive Promotions
          </p>
        </div>
        <button
          data-testid="submitButton"
          type="submit"
        >
          Submit
        </button>
      </form>
    </Form>
    <h3
      className="blue"
    >
      Everyone is Welcome!
    </h3>
    <p
      className="button-state"
    >
      No!
    </p>
    <button
      onClick={[Function]}
    >
      Click
    </button>
    <h2 />
    <input
      onChange={[Function]}
      type="text"
    />
    <div>
      <a
        className="lifeCycle"
        href="/"
      >
        componentDidMount
      </a>
    </div>
    <Test>
      <div>
        Testing
      </div>
    </Test>
  </div>
</App>
`;

exports[`<App /> shallow rendering matches the snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <p>
      Edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
    <a
      className="App-link"
      href="https://reactjs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Learn React
    </a>
  </header>
  <Form />
  <h3
    className="blue"
  >
    Everyone is Welcome!
  </h3>
  <p
    className="button-state"
  >
    No!
  </p>
  <button
    onClick={[Function]}
  >
    Click
  </button>
  <h2 />
  <input
    onChange={[Function]}
    type="text"
  />
  <div>
    <a
      className="lifeCycle"
      href="/"
    >
      componentDidMount
    </a>
  </div>
  <Test />
</div>
`;
